change to stable

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
             "email": "dexterliu1214@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {}
 }
